2012-07-24 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.[h,C], src/STAT_GraphRoutines.[h,C] : moved
	createRootedGraph and string_hash (renamed to statStringHash) to 
	STAT_GraphRoutines
	* src/STAT_FrontEnd.[h,C] : keep track of daemon errors and denote in
	stack traces
	* src/STAT_BackEnd.[h,C], src/STAT_GraphRoutines.[h,C],
	src/STAT_FrontEnd.[h,C] : created helper function to initialize bit vector
	edges
	* : removed trainling white spaces

2012-07-23 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py, scripts/STATGUI.py : fixed caching of edge labels w/
	count + rep

2012-07-20 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py, scripts/xdot.py : updated to latest xdot

2012-07-19 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.[C,h],src/STAT_FilterDefinitions.C,
	src/STAT_BackEnd.[C,h], src/STAT.[i,h], scripts/STATview.py,
	scripts/STATGUI.py : added ability to gather full edge labels

2012-07-17 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : add 1 to rank for checksum in count + rep case to
	account for rank 0
	* scripts/STAThelper.py, scripts/STATview.py : moved node query functions
	from STAThelper.py to STATview.py
	* scripts/STATview.py : proper handling of eq class identification for
	count + rep case

2012-07-14 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_GraphRoutines.[C,h], src/STAT_FrontEnd.[C,h],
	src/STAT_FilterDefinitions.C src/STAT_BackEnd.[C,h], src/STAT.[i,h,C],
	src/STATBench.C, scripts/STAThelper.py, scripts/STATview.py,
	scripts/STATGUI.py, doc/src/* : added count + representative level of
	detail

2012-07-13 Gregory L. Lee <lee218@llnl.gov>
	* config/x_ac_debuglibs.m4 : fixed stackwalker test to capture older versions

2012-07-12 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added ability to view source of collapsed/joined nodes
	* scripts/STATview.py : added ability to hide MPI with collapsed/joined nodes

2012-07-07 Gregory L. Lee <lee218@llnl.gov>