@@ -1,3 +1,7 @@
+2012-07-30 Gregory L. Lee <lee218@llnl.gov>
+	* configure.ac, config/*.m4 : added ability to disable rpath (on by
+	default)
+
 2012-07-24 Gregory L. Lee <lee218@llnl.gov>
 	* src/STAT_BackEnd.[h,C], src/STAT_GraphRoutines.[h,C] : moved
 	createRootedGraph and string_hash (renamed to statStringHash) to 
@@ -7,7 +11,7 @@
 	* src/STAT_BackEnd.[h,C], src/STAT_GraphRoutines.[h,C],
 	src/STAT_FrontEnd.[h,C] : created helper function to initialize bit vector
 	edges
-	* : removed trainling white spaces
+	* : removed trailing white spaces
 
 2012-07-23 Gregory L. Lee <lee218@llnl.gov>
 	* scripts/STATview.py, scripts/STATGUI.py : fixed caching of edge labels w/
